Removed the dot from the block names for readability. Fixes #30

--- a/blocks/button/button.styl
+++ b/blocks/button/button.styl
@@ -1,6 +1,6 @@
 button = prefix + 'button'
 
-{button} {
+.{button} {
     font: 13px/1.2 "Helvetica Neue", Arial, sans-serif;
 
     position: relative;
