--- a/blocks/link/link.styl
+++ b/blocks/link/link.styl
@@ -1,7 +1,7 @@
 link = prefix + 'link'
 
 /* Basic styles */
-{link} {
+.{link} {
     cursor: pointer;
 
     color: #1A3DC1;
