--- a/blocks/paranja/paranja.styl
+++ b/blocks/paranja/paranja.styl
@@ -2,7 +2,7 @@ paranja = prefix + 'paranja'
 
 
 /* Layer to fade out the page or a block */
-{paranja} {
+.{paranja} {
     z-index: 1073741823;
     position: fixed; /* Need to add iOS/IE6 fallback */
     top: 0;
@@ -49,7 +49,7 @@ paranja = prefix + 'paranja'
 
     if popup {
         /* Modal centered popup */
-        & > {popup} {
+        & > .{popup} {
             position: relative;
 
             display: inline-block;
