--- a/blocks/popup/popup__tail.styl
+++ b/blocks/popup/popup__tail.styl
@@ -1,5 +1,5 @@
 /* Popup's tail */
-{popup}__tail {
+.{popup}__tail {
     position: absolute;
 
     font-size: 11px;
@@ -8,28 +8,28 @@
     height: 1em;
     clip: rect(0,0,0,0); /* Hide until mode set */
 
-    {popup}_to_bottom > & {
+    .{popup}_to_bottom > & {
         top: 0;
         left: 50%;
         margin: -1em -.5em;
         clip: rect(-99em, 99em, auto, -99em)
     }
 
-    {popup}_to_top > & {
+    .{popup}_to_top > & {
         bottom: 0;
         left: 50%;
         margin: -1em -.5em;
         clip: rect(0, 99em, 99em, -99em)
     }
 
-    {popup}_to_left > & {
+    .{popup}_to_left > & {
         top: 50%;
         right: 0;
         margin: -.5em -1em;
         clip: rect(-99em, 99em, 99em, 0)
     }
 
-    {popup}_to_right > & {
+    .{popup}_to_right > & {
         top: 50%;
         left: 0;
         margin: -.5em -1em;
@@ -51,24 +51,24 @@
         box-shadow: .2em .2em .8em -.2em #000;
         transform: scale(.65,1) rotate(45deg);
 
-        {popup}_to_left > &,
-        {popup}_to_right > & {
+        .{popup}_to_left > &,
+        .{popup}_to_right > & {
             transform: scale(1,.65) rotate(45deg);
         }
 
-        {popup}_to_bottom > & {
+        .{popup}_to_bottom > & {
             top: 50%;
         }
 
-        {popup}_to_top > & {
+        .{popup}_to_top > & {
             top: -50%;
         }
 
-        {popup}_to_right > & {
+        .{popup}_to_right > & {
             left: 50%;
         }
 
-        {popup}_to_left > & {
+        .{popup}_to_left > & {
             left: -50%;
         }
     }
